:ship: fixed alignment

--- a/app/components/docs/Docs.css
+++ b/app/components/docs/Docs.css
@@ -26,7 +26,7 @@ main .main-container .rsc-ts-bubble {
 }
 
 p {
-  font-size: 3vh;
+  font-size: 1.5vw;
   line-height: 1.5;
 }
 
